@@ -15,7 +15,8 @@ ToDataFrameTree(x, ..., pruneFun = NULL)
 
 ToDataFrameTable(x, ..., pruneFun = NULL)
 
-ToDataFrameNetwork(x, ..., pruneFun = NULL, inheritFromAncestors = FALSE)
+ToDataFrameNetwork(x, ..., direction = c("climb", "descend"),
+  pruneFun = NULL, inheritFromAncestors = FALSE)
 }
 \arguments{
 \item{x}{The root \code{Node} of the tree or sub-tree to be convert to a data.frame}
@@ -37,6 +38,8 @@ If a specific Node does not contain the attribute, \code{NA} is added to the dat
 
 \item{inheritFromAncestors}{if FALSE, and if the attribute is a field or a method, then only a \code{Node} itself is
 searched for the field/method. If TRUE, and if the \code{Node} does not contain the attribute, then ancestors are also searched.}
+
+\item{direction}{when converting to a network, should the edges point from root to children ("climb") or from child to parent ("descend")?}
 }
 \value{
 ToDataFrameTree: a \code{data.frame}, where each row represents a \code{Node} in the tree or sub-tree
@@ -46,8 +49,8 @@ ToDataFrameTable: a \code{data.frame}, where each row represents a leaf \code{No
 spanned by \code{x}, possibly pruned according to \code{pruneFun}.
 
 ToDataFrameNetwork: a \code{data.frame}, where each row represents a \code{Node} in the tree or sub-tree
-spanned by \code{x}, possibly pruned according to \code{pruneFun}. The first column is called 'children', while the
-second is called 'parents', describing the parent to child edge. The third column is caled 'level'. x itself is not returned.
+spanned by \code{x}, possibly pruned according to \code{pruneFun}. The first column is called 'from', while the
+second is called 'to', describing the parent to child edge (for direction "climb") or the child to parent edge (for direction "descend").
 }
 \description{
 Convert a \code{data.tree} structure to a \code{data.frame}
@@ -58,7 +61,7 @@ acme$fieldsAll
 as.data.frame(acme, row.names = NULL, optional = FALSE, "cost", "p")
 
 ToDataFrameTree(acme, "cost", "p")
-ToDataFrameNetwork(acme, "cost", "p")
+ToDataFrameNetwork(acme, "cost", "p", direction = "climb")
 ToDataFrameTable(acme, "cost", "p")
 
 #use the pruneFun:
