@@ -6,7 +6,10 @@
 - FIX: Aggregate and Cumulate now work always on attributes having a formatter
 - ADD: as.igraph now has a 'directed' parameter
 - ADD: print now has a pruneMethod, allowing different ways to print a part of a tree only
-- CHANGE: renamed FromDataFrameTaxonomy and ToDataFrameTaxonomy to FromDataFrameNetwork and ToDataFrameNetwork, respectively
+- REMOVE: FromDataFrameTaxonomy and ToDataFrameTaxonomy (replaced by FromDataFrameNetwork and ToDataFrameNetwork, but with some differences)
+- ADD: FromDataFrameNetwork and ToDataFrameNetwork
+- IMPROVE: make Traversal "level" much faster
+
 
 ## Version 0.1.9 Pine II
 
